--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 	<div class="container">
-		<div id="buttons"></div>
+		<div id="buttons">
+			<button id="play-rock">Zagraj kamień</button>
+			<button id="play-paper">Zagraj papier</button>
+			<button id="play-scissors">Zagraj nożyce</button>
+		</div>
 		<div id="messages"></div>
 	</div>
 	<script src="js/functions.js"></script>
