ADD SIMLPLE HTML AND CSS MODYFICATIONS

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
 		<button id="play-paper">Zagraj papier</button>
 		<button id="play-scissors">Zagraj nożyce</button>
 	</div>
-	<div id="messages"></div>
+  <div>
+    <h1>WYNIKI GRY</h1>
+  </div>
+	<div id="messages">
+    <p>Zagranie komputera to:<br>Zagranie gracza to:</p>
+  </div>
 </div>
 
 <script src="js/functions.js"></script>
