ADD NEXT SIMPLE HTML AND CSS MODYFICATIONS

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
       <link rel="preconnect" href="https://fonts.gstatic.com">
       <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
       <link rel="preconnect" href="https://fonts.gstatic.com">
       <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="css/style.css">
@@ -16,13 +20,29 @@
 
 <!-- BUTTONS -->
 <div class="container">
+  <div>
+    <div class="small-title">
+      <p>Lorem ipsum dolor sit amet</p>
+    </div>
+    <div class="big-title">
+      <p>Vivamus sit amet<br>quam quis leo.</p>
+    </div>
+    <div class="random-text">
+      <p>
+        Maecenas orci nunc, vulputate sit amet purus id, mattis malesuada diam.
+        Pellentesque sagittis turpis nulla, pretium luctus ligula venenatis vitae.
+        Duis nec condimentum diam. Quisque nec ultricies libero. Aliquam neque diam,
+        consectetur eget euismod sit amet, commodo at est.
+      </p>
+    </div>
+  </div>
 	<div id="buttons">
 		<button id="play-rock">Zagraj kamień</button>
 		<button id="play-paper">Zagraj papier</button>
 		<button id="play-scissors">Zagraj nożyce</button>
 	</div>
   <div>
-    <h1>WYNIKI GRY</h1>
+    <p class="result-text">WYNIKI GRY</p>
   </div>
 	<div id="messages">
     <p>Zagranie komputera to:<br>Zagranie gracza to:</p>
